Add component support, Add Paper Version.